@@ -5,6 +5,7 @@ BUG: Ticket#841 - Strange output from THttpResponse (Christophe)
 BUG: Ticket#847 - getBaseUrl sometimes fails (Christophe)
 BUG: Ticket#843 - TDataList alternatinItem issue after changes in rev 2227 (Christophe)
 BUG: Ticket#849 - TDatePicker selecting current date problem (Christophe)
+BUG: Ticket#851 - TPropertyAccess doesn't get properties right if an object has a __call() method (Simon Lehmann, Knut)
 BUG: Ticket#859 - errorhandler error (stever)
 BUG: Ticket#860 - Prado::localize() bug (japplegame)
 BUG: Ticket#870 - Callback with redirect breaks lifecycle of page (stever)
